@@ -89,6 +89,7 @@ All (GUI):
 - Added <disabled> XRC tag for wxToolBar elements and <bg> for wxToolBar itself.
 - Fixed centering of top level windows on secondary displays.
 - Implemented wxDisplay::GetFromWindow() for platforms other than MSW.
+- More than one filter allowed in in wxDocTemplate filter.
 
 wxMSW:
 
